// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create snapshot should render and match the snapshot for adding an item 1`] = `
.emotion-57 {
  padding: 0 15px;
  width: 100%;
}

@media (min-width:768px) {
  .emotion-57 {
    max-width: 960px;
    margin: 30px auto;
  }
}

@media (max-width:767px) {
  .emotion-57 {
    padding: 15px;
  }
}

.emotion-0 {
  font-family: 'tiempos-head-semibold',georgia,serif;
  font-size: 28px;
  line-height: 1.2;
  margin-top: 0;
}

.emotion-55 {
  padding: 0 15px;
  width: 100%;
  margin: 0;
  background: #ffffff;
  width: auto;
}

@media (min-width:768px) {
  .emotion-55 {
    max-width: 960px;
    margin: 30px auto;
  }
}

@media (min-width:768px) {
  .emotion-55 {
    background: #ffffff;
    box-shadow: 0 2px 5px rgba(17,17,17,0.1);
    border-radius: 2px;
    padding: 20px 30px;
  }
}

@media (max-width:767px) {
  .emotion-55 {
    margin: 0 -15px;
    padding: 15px;
  }
}

.emotion-10 {
  display: block;
  margin-bottom: 15px;
}

.emotion-8 {
  position: relative;
}

.emotion-2 {
  font-weight: bold;
  display: block;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  width: 100%;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  min-height: 40px;
}

.emotion-6:focus {
  outline: none;
  border-image: linear-gradient(45deg,#4A90E2,#c6aeab) 2;
}

.emotion-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-49 {
  margin-left: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-44 {
  position: relative;
  box-sizing: border-box;
}

.emotion-43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 0;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 40px;
  outline: 0 !important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-43:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-43:hover {
  border-bottom: 1px solid #888;
}

.emotion-38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-36 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-37 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0,0%,20%);
  box-sizing: border-box;
}

.emotion-42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-39 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-41 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-41:hover {
  color: hsl(0,0%,60%);
}

.emotion-40 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

<div
  className="emotion-57 emotion-58"
>
  <h1
    className="emotion-0 emotion-1"
  >
    Add
  </h1>
  <form
    className="emotion-55 emotion-56"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="date"
            required={false}
          >
            Date
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="datetime-local"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="amount"
            required={false}
          >
            Amount
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          step="any"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="description"
            required={false}
          >
            Description
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="tags"
            required={false}
          >
            Tags
          </label>
        </div>
        <div
          className="emotion-44"
          id="tags"
          onKeyDown={[Function]}
        >
          <div
            className="emotion-43"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-38"
            >
              <div
                className="emotion-36"
              >
                Select...
              </div>
              <div
                className="emotion-37"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-42"
            >
              <span
                className="emotion-39"
              />
              <div
                aria-hidden="true"
                className="emotion-41"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="emotion-40"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="tags"
              type="hidden"
            />
          </div>
        </div>
      </div>
    </div>
    <footer
      className="emotion-53 emotion-54"
    >
      <div
        className="emotion-51 emotion-52"
      >
        <button
          className="emotion-49 emotion-50"
          type="submit"
        >
          Submit
        </button>
      </div>
    </footer>
  </form>
</div>
`;

exports[`Create snapshot should render and match the snapshot for editing an item 1`] = `
.emotion-59 {
  padding: 0 15px;
  width: 100%;
}

@media (min-width:768px) {
  .emotion-59 {
    max-width: 960px;
    margin: 30px auto;
  }
}

@media (max-width:767px) {
  .emotion-59 {
    padding: 15px;
  }
}

.emotion-0 {
  font-family: 'tiempos-head-semibold',georgia,serif;
  font-size: 28px;
  line-height: 1.2;
  margin-top: 0;
}

.emotion-57 {
  padding: 0 15px;
  width: 100%;
  margin: 0;
  background: #ffffff;
  width: auto;
}

@media (min-width:768px) {
  .emotion-57 {
    max-width: 960px;
    margin: 30px auto;
  }
}

@media (min-width:768px) {
  .emotion-57 {
    background: #ffffff;
    box-shadow: 0 2px 5px rgba(17,17,17,0.1);
    border-radius: 2px;
    padding: 20px 30px;
  }
}

@media (max-width:767px) {
  .emotion-57 {
    margin: 0 -15px;
    padding: 15px;
  }
}

.emotion-10 {
  display: block;
  margin-bottom: 15px;
}

.emotion-8 {
  position: relative;
}

.emotion-2 {
  font-weight: bold;
  display: block;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  width: 100%;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  min-height: 40px;
}

.emotion-6:focus {
  outline: none;
  border-image: linear-gradient(45deg,#4A90E2,#c6aeab) 2;
}

.emotion-53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-51 {
  margin-left: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.emotion-49 {
  font-size: 15px;
  cursor: pointer;
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;
}

.emotion-44 {
  position: relative;
  box-sizing: border-box;
}

.emotion-43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 0;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 40px;
  outline: 0 !important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-43:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-43:hover {
  border-bottom: 1px solid #888;
}

.emotion-38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-36 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-37 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0,0%,20%);
  box-sizing: border-box;
}

.emotion-42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-39 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-41 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-41:hover {
  color: hsl(0,0%,60%);
}

.emotion-40 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

<div
  className="emotion-59 emotion-60"
>
  <h1
    className="emotion-0 emotion-1"
  >
    Edit
  </h1>
  <form
    className="emotion-57 emotion-58"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="date"
            required={false}
          >
            Date
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="datetime-local"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="amount"
            required={false}
          >
            Amount
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          step="any"
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="description"
            required={false}
          >
            Description
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="tags"
            required={false}
          >
            Tags
          </label>
        </div>
        <div
          className="emotion-44"
          id="tags"
          onKeyDown={[Function]}
        >
          <div
            className="emotion-43"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-38"
            >
              <div
                className="emotion-36"
              >
                Select...
              </div>
              <div
                className="emotion-37"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-42"
            >
              <span
                className="emotion-39"
              />
              <div
                aria-hidden="true"
                className="emotion-41"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="emotion-40"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="tags"
              type="hidden"
            />
          </div>
        </div>
      </div>
    </div>
    <footer
      className="emotion-55 emotion-56"
    >
      <div
        className="emotion-53 emotion-54"
      >
        <a
          className="emotion-49 emotion-50"
          onClick={[Function]}
        >
          Delete
        </a>
        <button
          className="emotion-51 emotion-52"
          type="submit"
        >
          Submit
        </button>
      </div>
    </footer>
  </form>
</div>
`;
